Fix calculation of the row width on 64-bit platforms. Remove bitmap_raster() macro because Windows bitmap is not affected by the source platform alignment constrains. Initialize padding bytes to 0. Fix bug 688247

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@6043 a1074d23-0009-0410-80fe-cf8c14f379e6